@@ -44,7 +44,7 @@
 #import <wtf/Vector.h>
 #import <wtf/text/WTFString.h>
 
-#if USE(APPLE_INTERNAL_SDK)
+#if USE(APPLE_INTERNAL_SDK) && __has_include(<WebKitAdditions/WKContentViewInteractionAdditions.h>)
 #import <WebKitAdditions/WKContentViewInteractionAdditions.h>
 #endif
 
